Prevent line breaks in menu
Using CSS style white-space: nowrap; in menu, the long lists
no longer get dropped to the next line (wrapping behavior).
Instead, they are allowed to overlap out of the menu.

--- a/style/layout.css
+++ b/style/layout.css
@@ -12,6 +12,7 @@ body {
   left: 1em;
   width: 24em;
   height: 70%;
+  white-space: nowrap;
   overflow-y: scroll;
 }
 
